Исправления по рекомендации Юли.